# AG

./: .classpath  .gitignore  ARCHITECTURE.md  Hospital_Modernization_Architecture.md  README.md  build.xml  comprehensive_airline_event_platform_diagram.md  horizontal_layered_architecture_4_use_cases.md  hospital-modernization-architecture.md  navitaire_cae_architecture_diagrams.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/adapters/: auth.py  catalog_xmlrpc.py  email.py  payments.py
backend/app/api/: courses.py  event_register.py  programs.py  signup_pip_pdp_pfp.py  todos.py
backend/app/domain/: event_register.py
backend/app/repositories/: inmemory.py
backend/app/services/: event_registration.py
backend/tests/: test_event_register.py  test_health.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Courses.tsx  Programs.tsx  Todos.tsx
frontend/src/pages/event-register/: Company.tsx  Confirm.tsx  Contact.tsx  Options.tsx  Payment.tsx  Questions.tsx  User.tsx
migration-docs/: README.md
src/main/java/com/randomcoder/security/: DisableUrlSessionFilter.java
src/main/webapp/WEB-INF/: web-dev.xml
src/main/webapp/common/: header.jsp
src/main/webapp/js/: jquery.simplemodal.js  osx.js  pip.js
src/main/webapp/style/: certifications.css  event-register.css  home.css  lc-course-launch.css  lms.css  modaldialog.css  reset.css
(+116 files in other folders)
