[tool.poetry]
name = "ag-backend"
version = "0.1.0"
description = ""
authors = ["Devin AI <devin-ai-integration[bot]@users.noreplygithub.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
